--- a/projetos/Projeto_Pratico/index.html
+++ b/projetos/Projeto_Pratico/index.html
@@ -18,7 +18,7 @@
         <!-- Menu de navegação -->
     <nav>
 
-        <a href="https://pedrozacarias.github.io/Portifolio/">Portifólio</a>
+       <!--  <a href="https://pedrozacarias.github.io/Portifolio/">Portifólio</a> -->
         <a href="familia.html">Familia</a>
         <a href="filhos.html">Filhos</a>
         <a href="pets.html">Pets</a>
