--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <img src="img/pedro.jfif" alt="Pedro">
     <h1>Pedro Zacarias da Silva Filho</h1>
+    <h3>Sou técnico em Informática na Prefeitura de Parnaiba - PI</h3>
     <h3>Lic. Plena em Informática</h3>
     <h3>Bacharel em Direito</h3>
 
